--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,8 @@
+[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak
+{
+	display: none;
+}
+
 div.weather-controller
 {
 	text-align: center;
